--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
     }
   },
   "dependencies": {
-    "@carbon/icons-react": "^10.49.0",
+    "@carbon/react": "^1.13.0",
     "@ohri/openmrs-ohri-form-engine-lib": "^1.0.0-pre.118",
     "ace-builds": "^1.4.14",
-    "carbon-components-react": "^7.56.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
@@ -71,7 +70,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^12.0.11",
-    "@types/carbon-components-react": "^7.55.0",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.14",
@@ -86,7 +84,6 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.2.5",
     "browserslist-config-openmrs": "^1.0.0",
-    "carbon-components": "^10.56.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^6.3.0",
     "css-loader": "^3.2.0",
