--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -40,9 +40,8 @@
     "url": "https://github.com/UCSF-IGHS/openmrs-esm-ohri/issues"
   },
   "dependencies": {
-    "@carbon/icons-react": "^10.49.0",
+    "@carbon/react": "^1.13.0",
     "ace-builds": "^1.4.12",
-    "carbon-components-react": "^7.56.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
@@ -57,8 +56,6 @@
   "peerDependencies": {
     "@openmrs/esm-framework": "4.x",
     "@openmrs/esm-patient-common-lib": "4.x",
-    "carbon-components": "^10.19.0",
-    "carbon-icons": "^7.0.7",
     "dayjs": "^1.8.16",
     "react": "^18.2.0",
     "react-i18next": "^11.7.0",
@@ -73,7 +70,6 @@
     "@babel/runtime": "^7.17.8",
     "@openmrs/esm-framework": "4.x",
     "@openmrs/esm-patient-common-lib": "4.x",
-    "@types/carbon-components-react": "^7.36.1",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.161",
     "@types/react": "^18.0.14",
@@ -88,7 +84,6 @@
     "babel-loader": "^8.2.4",
     "babel-preset-minify": "^0.5.1",
     "browserslist-config-openmrs": "^1.0.0",
-    "carbon-components": "^10.56.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^6.3.0",
     "css-loader": "^3.2.0",
