--- a/packages/esm-ohri-core-app/package.json
+++ b/packages/esm-ohri-core-app/package.json
@@ -43,9 +43,8 @@
     "url": "https://github.com/UCSF-IGHS/openmrs-esm-ohri/issues"
   },
   "dependencies": {
-    "@carbon/icons-react": "^10.18.0",
+    "@carbon/react": "^1.13.0",
     "ace-builds": "^1.4.12",
-    "carbon-components-react": "^7.25.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
@@ -60,8 +59,6 @@
   "peerDependencies": {
     "@openmrs/esm-framework": "4.x",
     "@openmrs/esm-patient-common-lib": "4.x",
-    "carbon-components": "^10.19.0",
-    "carbon-icons": "^7.0.7",
     "dayjs": "^1.8.16",
     "react": "^18.2.0",
     "react-i18next": "^11.7.0"
