--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-test-renderer": "^16.9.0",
     "react-waypoint": "^10.1.0",
     "semver": "^7.3.7",
-    "systemjs-webpack-interop": "^2.3.2",
+    "systemjs-webpack-interop": "^2.3.7",
     "yup": "^0.29.1"
   },
   "devDependencies": {
@@ -66,11 +66,11 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.17.9",
     "@openmrs/esm-framework": "4.x",
-    "@testing-library/dom": "^7.20.0",
+    "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^12.0.11",
-    "@types/jest": "^24.9.1",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/jest": "^28.1.4",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -101,7 +101,6 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "lerna": "^4.0.0",
-    "node-sass": "^6.0.1",
     "openmrs": "4.x",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -109,11 +108,14 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "rxjs": "^6.6.2",
+    "sass": "^1.54.3",
     "sass-loader": "^10.2.1",
     "style-loader": "^1.0.0",
+    "systemjs-webpack-interop": "^2.3.7",
     "typescript": "^4.6.3",
     "unistore": "^3.5.2",
-    "webpack": "^5.72.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
