--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -50,7 +50,7 @@
     "moment": "^2.29.1",
     "react-test-renderer": "^16.9.0",
     "semver": "^7.3.5",
-    "systemjs-webpack-interop": "^2.3.2",
+    "systemjs-webpack-interop": "^2.3.7",
     "yup": "^0.29.1"
   },
   "peerDependencies": {
@@ -102,7 +102,6 @@
     "istanbul-badges-readme": "^1.4.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "node-sass": "^6.0.1",
     "openmrs": "4.x",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -112,14 +111,11 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "rxjs": "^6.6.2",
+    "sass": "^1.54.3",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
     "swr": "^1.1.2",
     "typescript": "^4.6.3",
-    "unistore": "^3.5.2",
-    "webpack": "^5.37.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^4.2.1"
+    "unistore": "^3.5.2"
   }
 }
