--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -60,7 +60,7 @@
     "react-test-renderer": "^16.9.0",
     "react-waypoint": "^10.1.0",
     "semver": "^7.3.5",
-    "systemjs-webpack-interop": "^2.3.2",
+    "systemjs-webpack-interop": "^2.3.7",
     "yup": "^0.29.1"
   },
   "devDependencies": {
@@ -85,7 +85,6 @@
     "istanbul-badges-readme": "^1.4.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "node-sass": "^6.0.1",
     "openmrs": "4.x",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -95,14 +94,15 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "rxjs": "^6.6.2",
+    "sass": "^1.54.3",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
     "typescript": "^4.0.3",
     "unistore": "^3.5.2",
-    "webpack": "^5.37.0",
+    "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^4.2.1"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "4.x",
