--- a/packages/esm-hiv-app/package.json
+++ b/packages/esm-hiv-app/package.json
@@ -53,7 +53,7 @@
     "moment": "^2.29.1",
     "react-test-renderer": "^16.9.0",
     "semver": "^7.3.5",
-    "systemjs-webpack-interop": "^2.3.2",
+    "systemjs-webpack-interop": "^2.3.7",
     "yup": "^0.29.1"
   },
   "peerDependencies": {
@@ -105,7 +105,6 @@
     "istanbul-badges-readme": "^1.4.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "node-sass": "^6.0.1",
     "openmrs": "4.x",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -115,6 +114,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "rxjs": "^6.6.2",
+    "sass": "^1.54.3",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
     "swr": "^1.1.2",
