--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -64,7 +64,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           registry-url: 'https://registry.npmjs.org'
 
