--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "2.0.1-alpha.2",
+  "version": "2.0.2",
   "command": {
     "publish": {
       "verifyAccess": false,
