--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-commons-lib",
-  "version": "2.0.1-alpha.2",
+  "version": "2.0.2",
   "description": "Commons library microfrontend of shared assets for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/ohri-commons-lib.js",
   "main": "src/index.ts",
@@ -41,13 +41,13 @@
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "5.x",
-    "@openmrs/esm-patient-common-lib": "4.x",
+    "@openmrs/esm-patient-common-lib": "5.x",
     "dayjs": "^1.8.16",
     "react": "^18.2.0",
     "react-i18next": "^11.18.6"
   },
   "devDependencies": {
-    "@openmrs/esm-patient-common-lib": "4.x",
+    "@openmrs/esm-patient-common-lib": "5.x",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "webpack": "^5.74.0",
