--- a/packages/esm-ohri-pmtct-app/package.json
+++ b/packages/esm-ohri-pmtct-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-pmtct",
-  "version": "2.0.1-alpha.2",
+  "version": "2.0.2",
   "description": "PMTCT microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/ohri-pmtct-app.js",
   "main": "src/index.ts",
@@ -38,7 +38,7 @@
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "5.x",
-    "@openmrs/esm-patient-common-lib": "4.x",
+    "@openmrs/esm-patient-common-lib": "5.x",
     "dayjs": "^1.8.16",
     "react": "^18.2.0",
     "react-i18next": "^11.7.0",
