--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: OHRI CI - 
+name: OHRI CI - @esm and Docker Image
 
 on:
   push:
@@ -133,6 +133,10 @@ jobs:
     needs: docker_setup
 
     steps:
+      - name: Wait for 5 min - Let @esms reflect on NPM registry
+        run: sleep 300
+      - name: Checkout repository
+        uses: actions/checkout@v3 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -158,10 +162,10 @@ jobs:
   dev_server_status:
     if: github.ref == 'refs/heads/dev' 
     runs-on: ubuntu-latest
-    needs: docker_staging_backend
+    needs: docker_devserver_frontend
 
     steps:
-      - name: Wait for 5 minutos - Let Images reflect on Docker Hub
+      - name: Wait for 5 min - Let Images reflect on Docker Hub
         run: sleep 300
       - name: Checkout repository
         uses: actions/checkout@v3  
