--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -130,7 +130,7 @@ jobs:
 
   docker_devserver_frontend:
     runs-on: ubuntu-latest
-    needs: release
+    needs: pre_release
 
     steps:
       - name: Wait for 5 min - Let @esms reflect on NPM registry
