--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -165,7 +165,7 @@ jobs:
     needs: docker_devserver_frontend
 
     steps:
-      - name: Wait for 5 min - Let Images reflect on Docker Hub
+      - name: Wait for 2 min - Let Images reflect on Docker Hub
         run: sleep 300
       - name: Checkout repository
         uses: actions/checkout@v3  
@@ -173,10 +173,10 @@ jobs:
       - name: Copy files to /home/runner/
         run: |
           ls -la -t
-          cp -r $GITHUB_WORKSPACE/.github/.ssh /home/runner/
+          cp -r $GITHUB_WORKSPACE/.github/.ssh/ /home/runner/
 
       - name: List contents of /home/runner/
-        run: ls -la /home/runner/
+        run: ls -la /home/runner/.ssh/
 
       - name: webfactory/ssh-agent
         uses: webfactory/ssh-agent@v0.8.0
@@ -189,7 +189,7 @@ jobs:
             
   dev_server_connection_dev:
       runs-on: ubuntu-latest
-      needs: dev_server_status
+      needs: docker_devserver_frontend
       steps:      
         - name: SSH to remote OHRI Dev server 
           run: | 
@@ -200,7 +200,7 @@ jobs:
         
   dev_deploy:
     runs-on: ubuntu-latest
-    needs: dev_server_status
+    needs: docker_devserver_frontend
 
     if: (github.event_name == 'push' ||  github.event.pull_request.merged) 
     
