--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -36,11 +36,11 @@
     "access": "public"
   },
   "dependencies": {
+    "@carbon/react": "^1.13.0",
     "ace-builds": "^1.4.12",
     "react-ace": "^9.4.4"
   },
   "peerDependencies": {
-    "@carbon/react": "1.x",
     "@openmrs/esm-framework": "5.x",
     "@openmrs/openmrs-form-engine-lib": "1.x",
     "react": "^18.2.0",
