--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@carbon/react": "^1.13.0",
     "@openmrs/openmrs-form-engine-lib": "next",
+    "fuzzy": "^0.1.3",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.3",
     "semver": "^7.3.7",
